Modified some colors to use atom variables

--- a/styles/activate-power-mode.less
+++ b/styles/activate-power-mode.less
@@ -51,7 +51,7 @@ atom-text-editor::shadow .streak-container,
   .counter {
     margin-top: 30px;
     font-size: 80px;
-    color: #4EFFA1;
+    color: @text-color-subtle;
     line-height: 1;
 
     &.bump {
@@ -64,7 +64,7 @@ atom-text-editor::shadow .streak-container,
     bottom: -20px;
     right: 0;
     display: block;
-    color: #4EFFA1;
+    color: @text-color-error;
     opacity: 0.75;
     font-size: 20px;
     text-align: right;
